Добавляет стили для мобильной версии

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -6,11 +6,21 @@
       <ul class="contacts-list">
         <li class="contacts-list-item">
           <p>Chicago</p>
-          <p>Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+          <p class="contacts-text">
+            Fusce ut velit laoreet, tempus arcu molestie vulputate
+          </p>
         </li>
         <li class="contacts-list-item">
-          <p>Monday - Friday <span>06:00 AM - 10:00 PM</span></p>
-          <p>Saturday - Sunday <span>08:00 AM - 16:00 PM</span></p>
+          <ul>
+            <li class="contacts-list-time"><p>Monday - Friday</p></li>
+            <li class="contacts-list-time">
+              <p class="contacts-time">06:00 AM - 10:00 PM</p>
+            </li>
+            <li class="contacts-list-time"><p>Saturday - Sunday</p></li>
+            <li class="contacts-list-time">
+              <p class="contacts-time">08:00 AM - 16:00 PM</p>
+            </li>
+          </ul>
         </li>
         <li class="contacts-list-item">
           <address class="contacts-address">
@@ -34,17 +44,28 @@
     </article>
 
     <article class="contacts-card">
-      <h3 class="contacts-card-header">Food truck</h3>
+      <h3 class="contacts-card-header green">Food truck</h3>
+
       <ul class="contacts-list">
         <li class="contacts-list-item">
           <p>Los Angeles</p>
-          <p>Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+          <p class="contacts-text">
+            Fusce ut velit laoreet, tempus arcu molestie vulputate
+          </p>
         </li>
         <li class="contacts-list-item">
-          <p>Monday - Friday <span>06:00 AM - 10:00 PM</span></p>
-          <p>Saturday - Sunday <span>08:00 AM - 16:00 PM</span></p>
+          <ul>
+            <li class="contacts-list-time"><p>Monday - Friday</p></li>
+            <li class="contacts-list-time">
+              <p class="contacts-time">06:00 AM - 10:00 PM</p>
+            </li>
+            <li class="contacts-list-time"><p>Saturday - Sunday</p></li>
+            <li class="contacts-list-time">
+              <p class="contacts-time">08:00 AM - 16:00 PM</p>
+            </li>
+          </ul>
         </li>
-        <li>
+        <li class="contacts-list-item">
           <address class="contacts-address">
             <ul class="contacts-address-list">
               <li class="contacts-address-item">
@@ -69,14 +90,24 @@
       <h3 class="contacts-card-header">Cafe</h3>
       <ul class="contacts-list">
         <li class="contacts-list-item">
-          <p>Chicago</p>
-          <p>Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+          <p>New York</p>
+          <p class="contacts-text">
+            Fusce ut velit laoreet, tempus arcu molestie vulputate
+          </p>
         </li>
         <li class="contacts-list-item">
-          <p>Monday - Friday <span>06:00 AM - 10:00 PM</span></p>
-          <p>Saturday - Sunday <span>08:00 AM - 16:00 PM</span></p>
+          <ul>
+            <li class="contacts-list-time"><p>Monday - Friday</p></li>
+            <li class="contacts-list-time">
+              <p class="contacts-time">06:00 AM - 10:00 PM</p>
+            </li>
+            <li class="contacts-list-time"><p>Saturday - Sunday</p></li>
+            <li class="contacts-list-time">
+              <p class="contacts-time">08:00 AM - 16:00 PM</p>
+            </li>
+          </ul>
         </li>
-        <li>
+        <li class="contacts-list-item">
           <address class="contacts-address">
             <ul class="contacts-address-list">
               <li class="contacts-address-item">
@@ -102,7 +133,7 @@
     <ul class="contacts-btn-list">
       <li class="contacts-btn-item">
         <a
-          class="contacts-btn"
+          class="contacts-btn button"
           href="#"
           target="_blank"
           rel="noopener noreferrer"
@@ -111,7 +142,7 @@
       </li>
       <li class="contacts-btn-item">
         <a
-          class="contacts-btn"
+          class="contacts-btn button"
           href="#"
           target="_blank"
           rel="noopener noreferrer"
