--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,3 +1,7 @@
+.contacts-section {
+  background-color: getColor('light-background-color');
+}
+
 .contacts-card {
   margin-left: auto;
   margin-right: auto;
@@ -12,6 +16,30 @@
   background-color: getColor('white');
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.contacts-list-item:not(:last-child) {
+  margin-bottom: 25px;
+}
+
+.contacts-list-item {
+  position: relative;
+
+  &:not(:last-child) {
+    padding-bottom: 25px;
+  }
+
+  &:not(:last-child)::after {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    content: '';
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: #e1e1e1;
+  }
 }
 
 .contacts-card-header {
@@ -23,7 +51,40 @@
   margin-bottom: 25px;
 
   text-transform: uppercase;
-  background: getColor('brown');
+  background-color: getColor('brown');
   border-radius: 4px;
   color: getColor('white');
+}
+
+.green {
+  background-color: getColor('green');
+}
+
+.contacts-text,
+.contacts-address-link {
+  color: getColor('gray-text');
+  line-height: 1.5;
+}
+.contacts-text {
+  margin-top: 10px;
+}
+
+.contacts-time {
+  color: getColor('intensive-pink');
+}
+
+.contacts-list-time:nth-child(2n):not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.contacts-container-btn {
+  display: block;
+  width: 162px;
+  margin-top: 55px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contacts-btn-item:not(:last-child) {
+  margin-bottom: 20px;
 }
