Добавлены стили слайдера

--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -41,22 +41,21 @@
               src="./images/slider/mobile/slider-comment-pic-1.jpg"
               alt="Emily, Los Angeles"
             />
-            <!-- <svg>
-              <use></use>
-            </svg> -->
-            <p class="slider__content_text">
-              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-              ipsum primis in nibh vel risus.
-            </p>
-            <svg width="4" height="4" style="background-color: #c7133e">
-              <use></use>
+            <div>
+              <p class="slider__content_text">
+                Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+                Aliquam sem. In hendrerit nulla quam nunc, accumsan congue.
+                Lorem ipsum primis in nibh vel risus.
+              </p>
+            </div>
+            <svg class="slider__content_reddot" width="4" height="4">
+              <use href="./images/svg/red-dot.svg"></use>
             </svg>
-            <svg width="4" height="4" style="background-color: #c7133e">
-              <use></use>
+            <svg class="slider__content_reddot" width="4" height="4">
+              <use href="./images/svg/red-dot.svg"></use>
             </svg>
-            <svg width="4" height="4" style="background-color: #c7133e">
-              <use></use>
+            <svg class="slider__content_reddot" width="4" height="4">
+              <use href="./images/svg/red-dot.svg"></use>
             </svg>
             <h2 class="slider__content_title">Emily, Los Angeles</h2>
           </div>
@@ -77,14 +76,14 @@
               Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
               ipsum primis in nibh vel risus.
             </p>
-            <svg width="4" height="4" style="background-color: #c7133e">
-              <use></use>
+            <svg class="slider__content_reddot" width="4" height="4">
+              <use href="./images/svg/red-dot.svg"></use>
             </svg>
-            <svg width="4" height="4" style="background-color: #c7133e">
-              <use></use>
+            <svg class="slider__content_reddot" width="4" height="4">
+              <use href="./images/svg/red-dot.svg"></use>
             </svg>
-            <svg width="4" height="4" style="background-color: #c7133e">
-              <use></use>
+            <svg class="slider__content_reddot" width="4" height="4">
+              <use href="./images/svg/red-dot.svg"></use>
             </svg>
             <h2 class="slider__content_title">Isabella, New York</h2>
           </div>
@@ -105,14 +104,14 @@
               Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
               ipsum primis in nibh vel risus.
             </p>
-            <svg width="4" height="4" style="background-color: #c7133e">
-              <use></use>
+            <svg class="slider__content_reddot" width="4" height="4">
+              <use href="./images/svg/red-dot.svg"></use>
             </svg>
-            <svg width="4" height="4" style="background-color: #c7133e">
-              <use></use>
+            <svg class="slider__content_reddot" width="4" height="4">
+              <use href="./images/svg/red-dot.svg"></use>
             </svg>
-            <svg width="4" height="4" style="background-color: #c7133e">
-              <use></use>
+            <svg class="slider__content_reddot" width="4" height="4">
+              <use href="./images/svg/red-dot.svg"></use>
             </svg>
             <h2 class="slider__content_title">Emma, Chicago</h2>
           </div>
