--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -1,23 +1,3 @@
-/* временно добавлен контейнер */
-/* .container {
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 10px;
-  padding-right: 10px;
-
-  @include size(mobile) {
-    width: 480px;
-  }
-  @include size(tablet) {
-    width: 768px;
-  }
-  @include size(desktop) {
-    width: 1200px;
-  }
-} */
-/* временно добавлен контейнер */
-
 .slider__section {
   display: flex;
   align-items: center;
@@ -44,12 +24,8 @@
 .slider {
   position: relative;
   overflow: hidden;
-  width: 100%;
+  width: 280px;
   margin: 0 auto;
-
-  @media screen and (min-width: 320px) {
-    width: 280px;
-  }
 
   @include size(tablet) {
     width: 620px;
@@ -71,7 +47,7 @@
   padding-right: 10px;
 }
 
-.slider__control {
+/* .slider__control {
   position: absolute;
   top: 0;
   bottom: 200px;
@@ -116,12 +92,12 @@
 }
 
 .slider__control_left::before {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23424242' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+  background-image: url('../images/svg/arrow-left.svg');
 }
 
 .slider__control_right::before {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23424242' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
-}
+  background-image: url('../images/svg/arrow-right.svg');
+} */
 
 .slider__content_img {
   display: block;
@@ -180,9 +156,7 @@
   }
 }
 
-.slider__content_reddots {
-  width: 4px;
-  height: 4px;
+.slider__content_reddot {
   border-radius: 4px;
   background-color: #c7133e;
 }
@@ -238,6 +212,7 @@
 
 .slider__indicators li.active {
   opacity: 1;
-  background-color: #d31342;
-  /* background-image: url(.../images/svg/house.svg); */
+  background-color: transparent;
+  border-radius: 0;
+  background-image: url(../images/svg/house.svg);
 }
