--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -51,12 +51,12 @@
                     </a>
                 </li>
                 </ul>
-            <p class="footer-contakt">Feel free to contact </p><a href="tel:+61(0)383766284"> +61 (0) 383 766 284</a>
+            <span class="footer-contakt">Feel free to contact <a href="tel:+61(0)383766284"> +61 (0) 383 766 284</a> </span>
             </li>
         </ul>
-            <div class="copyright"> © 2019 - IceCream. All Rights Reserved.</div>
-            </div>
+    </div>
     </footer>
+    <div class="copyright"> © 2019 - IceCream. All Rights Reserved.</div>
 </body>
 
 </html>
