--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #fff5f6;
+  background-color: getColor(light-background-color);
   height: 250px;
   padding-left: 115px;
   padding-right: 115px;
@@ -90,4 +90,12 @@
   &:hover {
     background-color: getColor(accent-color);
   }
+}
+.copyright {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 45px;
+  border-top: 1px solid #e1e1e1;
+  background-color: getColor(light-background-color);
 }
