--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,1 +1,56 @@
+.products-title {
+  display: block;
+  justify-content: center;
+  align-items: center;
 
+  @media screen and (min-width: 320px) {
+    width: 200px;
+    display: block;
+    text-align: center;
+    justify-content: center;
+    margin-top: 32px;
+  }
+}
+
+.products-text-title {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.17;
+
+  text-align: center;
+  text-transform: uppercase;
+
+  color: getColor('intensive-pink');
+}
+
+.products-main-title {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 34px;
+  line-height: 1.15;
+
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+
+  color: getColor('accent-color');
+}
+
+.cards-list {
+  width: 280px;
+  height: 485px;
+  background-color: getColor('dark-background-color');
+  border-radius: 24px;
+  margin-top: 17px;
+}
+
+.cards-list:nth-child(2) {
+  background-color: getColor('brown');
+}
+
+.cards-list:nth-child(3) {
+  background-color: getColor('green');
+}
