--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 @import 'base/visually-hidden';
 @import 'base/image';
 @import 'base/link';
+@import 'base/button';
 @import 'components/address';
 @import 'utils/colors';
 @import 'utils/size';
