--- a/src/sass/components/_body.scss
+++ b/src/sass/components/_body.scss
@@ -1,8 +1,12 @@
 body {
   font-family: DM Sans, sans-serif;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 12px;
   line-height: 1.83;
-  letter-spacing: 0.04em;
-  color: getColor("black");
+  letter-spacing: 0.03em;
+  color: getColor('black');
+
+  @include size(tablet) {
+    font-size: 16px;
+  }
 }
