--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -3,7 +3,6 @@
   justify-content: center;
   align-items: center;
 
-  @media screen and (min-width: 320px) {
     width: 200px;
     display: block;
     text-align: center;
@@ -21,6 +20,7 @@
 
   text-align: center;
   text-transform: uppercase;
+  margin-top: 15px;
 
   color: getColor('intensive-pink');
 }
