--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,64 +1,67 @@
+
 <section class="products">
     <div class="container">
-        <div>
-            <p>100% natural</p>
-            <h2>products</h2>
+        <div class="products-title">
+            <p class="products-text-title">100% natural</p>
+            <h2 class="products-main-title">products</h2>
         </div>
-        <ul>
-            <li>
-                <div>
+        <ul class="cards-item list">
+            <li class="cards-list">
+                <div class="cards-img">
                     <img src="">
                 </div>
-                <div>
-                    <h3>ice cream</h3>
-                    <svg width="26" height="6">
+                <div class="cards-box">
+                    <h3 class="cards-box-title">ice cream</h3>
+                    <svg class="cards-svg" width="26" height="6">
                         <use href="">
                         </use>
                     </svg>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et</p>
                     <a href="">
-                        <svg width="40" height="40">
+                        <svg class="cards-icon" width="40" height="40">
                             <use href="">
                             </use>
                         </svg>
                     </a>
                 </div>
             </li>
-            <li>
-                <div>
+            <li class="cards-list">
+                <div class="cards-img">
                     <img src="">
                 </div>
-                <div>
-                    <h3>ice coffee</h3>
-                    <svg width="26" height="6">
+                <div class="cards-box">
+                    <h3 class="cards-box-title">ice coffee</h3>
+                    <svg class="cards-svg" width="26" height="6">
                         <use href="">
                         </use>
                     </svg>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        ut
                         labore et</p>
                     <a href="">
-                        <svg width="40" height="40">
+                        <svg class="cards-icon" width="40" height="40">
                             <use href="">
                             </use>
                         </svg>
                     </a>
                 </div>
             </li>
-            <li>
-                <div>
+            <li class="cards-list">
+                <div class="cards-img">
                     <img src="">
                 </div>
-                <div>
-                    <h3>milkshakes</h3>
-                    <svg width="26" height="6">
+                <div class="cards-box">
+                    <h3 class="cards-box-title">milkshakes</h3>
+                    <svg class="cards-svg" width="26" height="6">
                         <use href="">
                         </use>
                     </svg>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        ut
                         labore et</p>
                     <a href="">
-                        <svg width="40" height="40">
+                        <svg class="cards-icon" width="40" height="40">
                             <use href="">
                             </use>
                         </svg>
