--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -72,6 +72,7 @@
 }
 .footer-social {
   display: flex;
+  justify-content: right;
 }
 .footer-social-svg {
   width: inherit;
@@ -80,6 +81,8 @@
 }
 .footer-social-container {
   display: flex;
+  margin-right: 25px;
+  margin-bottom: 50px;
 }
 .footer-social-link {
   width: 34px;
@@ -90,6 +93,9 @@
   &:hover {
     background-color: getColor(accent-color);
   }
+}
+.footer-contakt {
+  text-align: right;
 }
 .copyright {
   display: flex;
