--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -130,6 +130,9 @@
     background-color: getColor(accent-color);
   }
 }
+.footer-contakt {
+  text-align: right;
+}
 .copyright {
   display: flex;
   justify-content: center;
