--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,15 +10,15 @@
 @import 'base/visually-hidden';
 @import 'base/image';
 @import 'base/link';
-@import 'base/button';
 @import 'components/address';
 @import 'utils/colors';
 @import 'utils/size';
+@import 'base/button';
 @import 'components/container';
 @import 'components/body';
 @import 'components/header';
 @import 'components/hero';
-// @import 'components/products';
+@import 'components/products';
 @import 'components/him';
 @import 'components/slider';
 @import 'components/contacts';
