--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -11,7 +11,7 @@
                     <a href="https://instagram.com/" target="_blank" rel="noopener noreferer"
                     aria-label="Instagram" class="footer-social-link">
                     <svg class="footer-social-svg">
-                        <use href="../src/images/symbol-defs.svg#github"></use>
+                        <use href="#"></use>
                     </svg>
                     </a>
                 </li>
@@ -19,7 +19,7 @@
                     <a href="https://instagram.com/" target="_blank" rel="noopener noreferer"
                     aria-label="Instagram" class="footer-social-link">
                     <svg class="footer-social-svg">
-                        <use href="../src/images/symbol-defs.svg#Group"></use>
+                        <use href="#"></use>
                     </svg>
                     </a>
                     </li>
@@ -27,7 +27,7 @@
                     <a href="https://instagram.com/" target="_blank" rel="noopener noreferer"
                     aria-label="Instagram" class="footer-social-link">
                         <svg class="footer-social-svg">
-                            <use href="../src/images/symbol-defs.svg#telegram"></use>
+                            <use href="#"></use>
                         </svg>
                     </a>
                 </li>
