--- a/src/partials/him.html
+++ b/src/partials/him.html
@@ -1,19 +1,40 @@
 <section class="container">
   <hgroup>
-    <h2>tradition and love </h2>
-    <h3>how it’s made?</h3>
+    <h2 class="him-section-title">tradition and love </h2>
+    <h3 class="him-title">how it’s made?</h3>
   </hgroup>
-  <div>
-    <p>Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
-    <p>Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
-
-
-      Aliquam erat volutpat. Aenean accumsan.</p>
-    <button>Read more</button>
+  <div class="flex-container">
+    <picture>
+      <source
+        srcset="./images/him/desktop/how-its-made-cow.png 1x, ./images/him/desktop/how-its-made-cow@x2.png 2x"
+        media="(min-width: 1200px)" />
+      <source
+        srcset="./images/him/tablet/how-its-made-cow.png 1x 1x, ./images/him/tablet/how-its-made-cow@x2.png 2x"
+        media="(min-width: 768px)" />
+      <source
+        srcset="./images/him/mobile/how-its-made-cow.png 1x, ./images/him/mobile/how-its-made-cow@x2.png 2x"
+        media="(max-width: 767px)" />
+      <img src="./images/him/mobile/cow.png" alt="Cow HIM">
+    </picture>
   </div>
-  <ul>
-    <li><p>721</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</li>
-    <li><p>16kg</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</li>
-    <li><p>84</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</li>
+  <div class="him-div-bg">
+    <p class="text-him text-gray">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus,
+      faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
+    <p class="text-him text-gray">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus
+      orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa
+      nibh, tincidunt.</p>
+    <p class="text-him text-gray">Aliquam erat volutpat. Aenean accumsan.</p>
+    <button class="btn-him">Read more</button>
+  </div>
+  <ul class="container list flex">
+    <li class="him-list"><img src="./images/him/cow-milk.svg" alt="" />
+      <p class="bullet-him">721</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+    </li>
+    <li class="him-list"><img src="./images/him/apple-basket.svg" alt="">
+      <p class="bullet-him">16kg</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+    </li>
+    <li class="him-list"><img src="./images/him/heart-candy.svg" alt="">
+      <p class="bullet-him">84</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+    </li>
   </ul>
 </section>
