Добавила фотографии и задала стили для мобильной версии

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,3 @@
-
 <section class="products">
     <div class="container">
         <div class="products-title">
@@ -8,7 +7,7 @@
         <ul class="cards-item list">
             <li class="cards-list">
                 <div class="cards-img">
-                    <img src="">
+                <!-- <img src="../images/products/mobile/product-icecream.png" alt="мороженое в стаканчике" width="249" height="252"> -->
                 </div>
                 <div class="cards-box">
                     <h3 class="cards-box-title">ice cream</h3>
@@ -16,12 +15,12 @@
                         <use href="">
                         </use>
                     </svg>
-                    <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et</p>
+                    <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
+                        </p>
                     <a href="">
                         <svg class="cards-icon" width="40" height="40">
-                            <use href="">
-                            </use>
+                            <!-- <use href="./images/sprite.svg#arrow-products">
+                            </use> -->
                         </svg>
                     </a>
                 </div>
