--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,13 +1,15 @@
 .products-title {
-  display: block;
-  justify-content: center;
-  align-items: center;
-
+  margin-left: auto;
+  margin-right: auto;
   width: 200px;
   display: block;
   text-align: center;
   justify-content: center;
-  margin-top: 32px;
+}
+
+.products {
+  padding-top: 120px;
+  padding-bottom: 98px;
 }
 
 .products-text-title {
@@ -19,12 +21,13 @@
 
   text-align: center;
   text-transform: uppercase;
-  margin-top: 15px;
+  margin-bottom: 15px;
 
   color: getColor('intensive-pink');
 }
 
 .products-main-title {
+  margin-bottom: 31px;
   font-family: Titan One;
   font-style: normal;
   font-weight: normal;
@@ -39,11 +42,20 @@
 }
 
 .cards-list {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 161px;
+  padding-bottom: 41px;
   width: 280px;
   height: 485px;
   background-color: getColor('dark-background-color');
   border-radius: 24px;
-  margin-top: 17px;
+  margin-bottom: 17px;
+}
+
+.cards-list:last-child {
+  margin-bottom: 0px;
 }
 
 .cards-list:nth-child(2) {
@@ -52,4 +64,39 @@
 
 .cards-list:nth-child(3) {
   background-color: getColor('green');
+}
+
+.cards-img {
+  position: absolute;
+  display: block;
+  z-index: 6;
+}
+
+.cards-box-title {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 1.15;
+
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+
+  color: getColor('white');
+}
+
+.cards-text {
+  padding-right: 39px;
+  padding-left: 41px;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.52;
+
+  text-align: center;
+  letter-spacing: 0.04em;
+
+  color: getColor('white');
 }
