добавила картинки на карточки и спозиционировала их

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -7,7 +7,7 @@
         <ul class="cards-item list">
             <li class="cards-list">
                 <div class="cards-img">
-                <!-- <img src="../images/products/mobile/product-icecream.png" alt="мороженое в стаканчике" width="249" height="252"> -->
+                <img src="./images/products/mobile/product-icecream.png" alt="мороженое в стаканчике" width="249" height="252">
                 </div>
                 <div class="cards-box">
                     <h3 class="cards-box-title">ice cream</h3>
@@ -27,7 +27,7 @@
             </li>
             <li class="cards-list">
                 <div class="cards-img">
-                    <img src="">
+                    <img src="./images/products/mobile/product-icecoffee.png" alt="холодный кофе" width="249" height="252">
                 </div>
                 <div class="cards-box">
                     <h3 class="cards-box-title">ice coffee</h3>
@@ -48,7 +48,7 @@
             </li>
             <li class="cards-list">
                 <div class="cards-img">
-                    <img src="">
+                    <img src="./images/products/mobile/product-milkshake.png" alt="молочный коктейль" width="249" height="252">
                 </div>
                 <div class="cards-box">
                     <h3 class="cards-box-title">milkshakes</h3>
