частично прописала стили для таблетки

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -19,8 +19,8 @@
                         </p>
                     <a href="">
                         <svg class="cards-icon" width="40" height="40">
-                            <!-- <use href="./images/sprite.svg#arrow-products">
-                            </use> -->
+                            <use href="">
+                            </use>
                         </svg>
                     </a>
                 </div>
