--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,33 +8,33 @@
             <li class="footer-right">
                 <ul class="footer-social">
                 <li class="footer-social-container">
-                    <a href="https://instagram.com/" target="_blank" rel="noopener noreferer"
-                    aria-label="Instagram" class="footer-social-link">
+                    <a href="https://github.com/" target="_blank" rel="noopener noreferer"
+                    aria-label="github" class="footer-social-link">
                     <svg class="footer-social-svg">
-                        <use href="../src/images/symbol-defs.svg#github"></use>
+                        <use href="../src/images/svg/sprite.svg#git"></use>
                     </svg>
                     </a>
                 </li>
                 <li class="footer-social-container">
-                    <a href="https://instagram.com/" target="_blank" rel="noopener noreferer"
-                    aria-label="Instagram" class="footer-social-link">
+                    <a href="https://telegram.com/" target="_blank" rel="noopener noreferer"
+                    aria-label="telegram" class="footer-social-link">
                     <svg class="footer-social-svg">
-                        <use href="../src/images/symbol-defs.svg#Group"></use>
+                        <use href="../src/images/svg/sprite.svg#telegram"></use>
                     </svg>
                     </a>
                     </li>
                 <li class="footer-social-container">
-                    <a href="https://instagram.com/" target="_blank" rel="noopener noreferer"
-                    aria-label="Instagram" class="footer-social-link">
+                    <a href="https://facebook.com/" target="_blank" rel="noopener noreferer"
+                    aria-label="facebook" class="footer-social-link">
                         <svg class="footer-social-svg">
-                            <use href="../src/images/symbol-defs.svg#telegram"></use>
+                            <use href="../src/images/svg/sprite.svg#facebook"></use>
                         </svg>
                     </a>
                 </li>
                 </ul>
-            <span class="footer-contakt">Feel free to contact <a href="tel:+61(0)383766284"> +61 (0) 383 766 284</a> </span>
+            <span>Feel free to contact <a class="footer-contakt" href="tel:+61(0)383766284"> +61 (0) 383 766 284</a> </span>
             </li>
         </ul>
     </div>
     </footer>
-    <div class="copyright"> © 2019 - IceCream. All Rights Reserved.</div>
+    <div class="copyright-container"><span class="copyright-text"> © 2019 - IceCream. All Rights Reserved.</span></div>
