Правки в слайдере и свг

--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -41,13 +41,11 @@
               src="./images/slider/mobile/slider-comment-pic-1.jpg"
               alt="Emily, Los Angeles"
             />
-            <div>
-              <p class="slider__content_text">
-                Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-                Aliquam sem. In hendrerit nulla quam nunc, accumsan congue.
-                Lorem ipsum primis in nibh vel risus.
-              </p>
-            </div>
+            <p class="slider__content_text">
+              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+              ipsum primis in nibh vel risus.
+            </p>
             <svg class="slider__content_reddot" width="4" height="4">
               <use href="./images/svg/red-dot.svg"></use>
             </svg>
