--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,11 +1,15 @@
 .header {
-  position: relative;
+  position: absolute;
   left: 0px;
+  right: 0px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: pink;
-  padding: 5px 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 20px;
+  padding-left: 20px;
+  z-index: 665;
   @include size(tablet) {
     padding: 37px 35px 15px 35px;
   }
@@ -30,29 +34,31 @@
 
 .header-menu-container {
   @media screen and (max-width: 1199px) {
-    display: none;
-    // transform: translateX(100%);
-    // transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    // overflow: hidden;
-    position: absolute;
+    z-index: 666;
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: fixed;
     top: 0px;
     right: 0px;
     width: 250px;
-    // height: 500px;
+    height: 500px;
     background-color: #e17992;
     text-align: center;
     padding: 60px 0px;
     filter: drop-shadow(-8px 0px 20px rgba(0, 0, 0, 0.25));
   }
+  @include size(tablet) {
+    height: 1020px;
+  }
 
   @include size(desktop) {
     display: flex;
+    height: 100%;
   }
 }
 .header-menu-container.is-open {
-  display: block;
   filter: drop-shadow(-8px 0px 20px rgba(0, 0, 0, 0.25));
-  // transform: translateX(0%);
+  transform: translateX(0%);
 }
 .header-close-btn {
   position: absolute;
@@ -61,22 +67,33 @@
   padding: 0px;
   width: 30px;
   height: 30px;
-  background-color: getColor('white');
+  border: none;
+  background-color: rgba(0, 0, 0, 0);
+  &:hover,
+  &:focus {
+    .header-close-icon {
+      fill: getColor('accent-color');
+    }
+  }
   @include size(desktop) {
     display: none;
   }
 }
 
+.header-close-icon {
+  fill: getColor('white');
+}
+
 .header-order-btn_menu {
+  display: inline-block;
   width: 160px;
-  height: 45px;
-  background: getColor('white');
-  font-size: 16px;
-  line-height: 1.313;
-  color: getColor('accent-color');
-  border: none;
-  border-radius: 22px;
   margin-bottom: 20px;
+  &:hover,
+  &:focus {
+    .header-order-icon {
+      fill: getColor('white');
+    }
+  }
   @include size(desktop) {
     display: none;
   }
@@ -87,6 +104,7 @@
     padding: 10px 20px;
     text-align: start;
     border: 1px solid #e18298;
+    background-color: inherit;
     @include size(desktop) {
       padding: 0px;
       border: none;
@@ -106,7 +124,8 @@
   line-height: 1.286;
   text-decoration: none;
   color: getColor('white');
-  &:hover {
+  &:hover,
+  &:focus {
     color: getColor('accent-color');
   }
   @include size(desktop) {
@@ -130,26 +149,45 @@
 }
 
 .header-burger {
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   padding: 0px;
+  border: none;
+  padding: 0px;
+  background-color: rgba(0, 0, 0, 0);
+  &:hover,
+  &:focus {
+    .header-burger-icon {
+      fill: getColor('white');
+    }
+  }
   @include size(desktop) {
     display: none;
   }
 }
 
+.header-burger-icon {
+  width: 20px;
+  height: 20px;
+  fill: getColor('accent-color');
+}
+
 .header-order-btn {
   display: none;
   width: 160px;
-  height: 45px;
-  background: #ffffff;
-  font-size: 16px;
-  line-height: 1.313;
-  color: getColor('accent-color');
-  border: none;
-  border-radius: 22px;
   cursor: pointer;
+  &:hover,
+  &:focus {
+    .header-order-icon {
+      fill: getColor('white');
+    }
+  }
   @include size(tablet) {
     display: block;
   }
+}
+
+.header-order-icon {
+  fill: getColor('accent-color');
+  margin-left: 10px;
 }
