--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,7 +10,7 @@
           </button>
           <button class="button header-order-btn_menu" type="button">Buy now
             <svg class="header-order-icon" width="7px" height="10px">
-              <use href="./images/svg/sprite.svg#arrow-menu"></use>
+              <use href="./images/svg/sprite.svg#arrow-right"></use>
             </svg>
       
           </button>
@@ -34,7 +34,7 @@
         <li class="item">
           <button class="button header-order-btn" type="button">Buy now
             <svg class="header-order-icon" width="7px" height="10px">
-              <use href="./images/svg/sprite.svg#arrow-menu"></use>
+              <use href="./images/svg/sprite.svg#arrow-right"></use>
             </svg>
           </button>
         </li>
