--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="contacts-section">
+<section id="contacts" class="contacts-section">
   <div class="container">
     <h2 class="contacts-header visually-hidden">Контакты</h2>
     <div class="contacts-container">
